--- a/Articulo/Article_pweb2.tex
+++ b/Articulo/Article_pweb2.tex
@@ -11,7 +11,7 @@
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
 
-\title{Conference Paper Title*\\
+\title{EsGames: Desarrollo de una Plataforma Web para la Venta de Videojuegos Utilizando Django y Vue.js\\
 {\footnotesize \textsuperscript{*}Note: Sub-titles are not captured in Xplore and
 should not be used}
 \thanks{Identify applicable funding agency here. If none, delete this.}
@@ -46,7 +46,7 @@ fjimenezp@unsa.edu.pe}
 \maketitle
 
 \begin{abstract}
-................................................
+This paper presents the design and development of GameStore, a web-based platform intended to simulate the operation of a digital video game store. The system is structured using a client-server architecture, with Django employed for backend development and Vue.js for frontend implementation. The application allows users to register, log in, browse a catalog of video games, add products to a shopping cart, and manage a personal library of purchased titles. Additional features include user balance management, game reviews, ratings, and favorites, aiming to improve user interaction and engagement. The system implements a RESTful API to ensure efficient communication between client and server, facilitating modularity and scalability. 
 \end{abstract}
 
 \begin{IEEEkeywords}
