add the keyWords

--- a/Articulo/Article_pweb2.tex
+++ b/Articulo/Article_pweb2.tex
@@ -50,7 +50,7 @@ This paper presents the design and development of GameStore, a web-based platfor
 \end{abstract}
 
 \begin{IEEEkeywords}
--------------------------------------------------
+Video game store, web development, Django, Vue.js, REST API.
 \end{IEEEkeywords}
 
 \section{Introduccion}
