Correct spelling and add Introduction with two references

--- a/Articulo/Article_pweb2.tex
+++ b/Articulo/Article_pweb2.tex
@@ -11,35 +11,35 @@
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
 
-\title{EsGames: Desarrollo de una Plataforma Web para la Venta de Videojuegos Utilizando Django y Vue.js\\
+\title{ESGames: Desarrollo de una Plataforma Web para la Venta de Videojuegos Utilizando Django y Vue.js\\
 {\footnotesize \textsuperscript{*}Note: Sub-titles are not captured in Xplore and
 should not be used}
 \thanks{Identify applicable funding agency here. If none, delete this.}
 }
 
-\author{\IEEEauthorblockN{1\textsuperscript{st} Flores Nuñes, Rodrigo Fransisco}
-\IEEEauthorblockA{\textit{Univercidad Nacioal De San Agustin)} \\
+\author{\IEEEauthorblockN{1\textsuperscript{st} Flores Nuñes, Rodrigo Francisco}
+\IEEEauthorblockA{\textit{Universidad Nacional de San Agustín)} \\
 \textit{}
-Arequipa, Peru \\
+Arequipa, Perú \\
 email address or ORCID}
 \and
 \IEEEauthorblockN{2\textsuperscript{nd} Jimenez Paredes, Fabricio Gabriel}
-\IEEEauthorblockA{\textit{Univercidad Nacioal De San Agustin} \\
+\IEEEauthorblockA{\textit{Universidad Nacional de San Agustín} \\
 \textit{}
-Arequipa, Peru \\
+Arequipa, Perú \\
 fjimenezp@unsa.edu.pe}
 \and
 \IEEEauthorblockN{3\textsuperscript{rd} Leon Ramos, Mijael Paul}
-\IEEEauthorblockA{\textit{Univercidad Nacioal De San Agustin} \\
+\IEEEauthorblockA{\textit{Universidad Nacional de San Agustín} \\
 \textit{}
-Arequipa, Peru \\
+Arequipa, Perú \\
 fjimenezp@unsa.edu.pe}
 \and
 
 \IEEEauthorblockN{4\textsuperscript{th} Paredes Miranda, Mauricio Antonio}
-\IEEEauthorblockA{\textit{Univercidad Nacioal De San Agustin} \\
+\IEEEauthorblockA{\textit{Universidad Nacional de San Agustín} \\
 \textit{}
-Arequipa, Peru \\
+Arequipa, Perú \\
 fjimenezp@unsa.edu.pe}
 }
 
@@ -54,7 +54,13 @@ Video game store, web development, Django, Vue.js, REST API.
 \end{IEEEkeywords}
 
 \section{Introduccion}
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa. 
+El crecimiento sostenido del comercio electrónico ha transformado la manera en que los usuarios acceden y consumen productos digitales, incluyendo los videojuegos. En este contexto, las plataformas en línea han adquirido una relevancia fundamental al permitir la distribución eficiente de títulos, la gestión de bibliotecas personales y la interacción entre usuarios mediante reseñas y valoraciones.
+
+El presente trabajo describe el desarrollo de GameStore, una aplicación web que simula una tienda digital de videojuegos. La plataforma permite a los usuarios registrarse, iniciar sesión, explorar un catálogo de juegos, añadir productos a un carrito de compras y adquirirlos utilizando un sistema de saldo virtual. Asimismo, el sistema ofrece funcionalidades complementarias como la biblioteca de juegos adquiridos, el sistema de favoritos, y módulos para realizar valoraciones y comentarios.
+
+Para la implementación se empleó una arquitectura cliente-servidor, donde el backend fue desarrollado con Django, un framework robusto basado en el patrón modelo-vista-controlador (MVC), ampliamente utilizado en aplicaciones web modernas por su seguridad y escalabilidad [1]. El frontend se desarrolló utilizando Vue.js, un framework progresivo de JavaScript orientado a componentes, que permite construir interfaces reactivas bajo el paradigma de aplicaciones de una sola página (SPA, por sus siglas en inglés) [2].
+
+El desarrollo de GameStore busca demostrar la viabilidad de construir plataformas especializadas de comercio digital utilizando tecnologías web modernas, priorizando aspectos como modularidad, rendimiento y experiencia de usuario. 
 
 \section{Ease of Use}
 
@@ -259,13 +265,13 @@ For papers published in translation journals, please give the English
 citation first, followed by the original foreign-language citation \cite{b6}.
 
 \begin{thebibliography}{00}
-\bibitem{b1} G. Eason, B. Noble, and I. N. Sneddon, ``On certain integrals of Lipschitz-Hankel type involving products of Bessel functions,'' Phil. Trans. Roy. Soc. London, vol. A247, pp. 529--551, April 1955.
-\bibitem{b2} J. Clerk Maxwell, A Treatise on Electricity and Magnetism, 3rd ed., vol. 2. Oxford: Clarendon, 1892, pp.68--73.
-\bibitem{b3} I. S. Jacobs and C. P. Bean, ``Fine particles, thin films and exchange anisotropy,'' in Magnetism, vol. III, G. T. Rado and H. Suhl, Eds. New York: Academic, 1963, pp. 271--350.
-\bibitem{b4} K. Elissa, ``Title of paper if known,'' unpublished.
-\bibitem{b5} R. Nicole, ``Title of paper with only first word capitalized,'' J. Name Stand. Abbrev., in press.
-\bibitem{b6} Y. Yorozu, M. Hirano, K. Oka, and Y. Tagawa, ``Electron spectroscopy studies on magneto-optical media and plastic substrate interface,'' IEEE Transl. J. Magn. Japan, vol. 2, pp. 740--741, August 1987 [Digests 9th Annual Conf. Magnetics Japan, p. 301, 1982].
-\bibitem{b7} M. Young, The Technical Writer's Handbook. Mill Valley, CA: University Science, 1989.
+\bibitem{b1} Django Software Foundation, “Django,” https://www.djangoproject.com/, Accedido: 24-jul-2025.
+\bibitem{b2} Vue.js Developers, “Vue.js - The Progressive JavaScript Framework,” https://vuejs.org/, Accedido: 24-jul-2025.
+\bibitem{b3} .
+\bibitem{b4} .
+\bibitem{b5} .
+\bibitem{b6} .
+\bibitem{b7} .
 \end{thebibliography}
 \vspace{12pt}
 \color{red}
