--- a/Articulo/Article_pweb2.tex
+++ b/Articulo/Article_pweb2.tex
@@ -18,7 +18,7 @@ should not be used}
 }
 
 \author{\IEEEauthorblockN{1\textsuperscript{st} Flores Nuñes, Rodrigo Francisco}
-\IEEEauthorblockA{\textit{Universidad Nacional de San Agustín)} \\
+\IEEEauthorblockA{\textit{Universidad Nacional de San Agustín} \\
 \textit{}
 Arequipa, Perú \\
 email address or ORCID}
@@ -60,216 +60,119 @@ El presente trabajo describe el desarrollo de GameStore, una aplicación web que
 
 Para la implementación se empleó una arquitectura cliente-servidor, donde el backend fue desarrollado con Django, un framework robusto basado en el patrón modelo-vista-controlador (MVC), ampliamente utilizado en aplicaciones web modernas por su seguridad y escalabilidad [1]. El frontend se desarrolló utilizando Vue.js, un framework progresivo de JavaScript orientado a componentes, que permite construir interfaces reactivas bajo el paradigma de aplicaciones de una sola página (SPA, por sus siglas en inglés) [2].
 
-El desarrollo de GameStore busca demostrar la viabilidad de construir plataformas especializadas de comercio digital utilizando tecnologías web modernas, priorizando aspectos como modularidad, rendimiento y experiencia de usuario. 
+El desarrollo de GameStore busca demostrar la viabilidad de construir plataformas especializadas de comercio digital utilizando tecnologías web modernas, priorizando aspectos como modularidad, rendimiento y experiencia de usuario.
+ 
+\section{Marco Teorico}
+El desarrollo de aplicaciones web modernas requiere el uso de herramientas y marcos que permitan separar responsabilidades, garantizar la escalabilidad del sistema y mejorar la experiencia del usuario final. En este proyecto se utilizaron tecnologías ampliamente adoptadas en la industria como Django, Vue.js, y la arquitectura basada en API REST. A continuación, se detallan los fundamentos teóricos y tecnológicos empleados.
 
-\section{Ease of Use}
+\subsection{Django}
+Django es un framework de desarrollo web de alto nivel escrito en Python que sigue el patrón modelo-vista-controlador (MVC), aunque su implementación se describe como modelo-vista-template (MVT). Django permite una gestión eficiente de modelos de datos mediante un ORM (Object-Relational Mapper), además de contar con herramientas integradas para la autenticación, administración y enrutamiento [1]. Su robustez y modularidad lo hacen adecuado para aplicaciones escalables y seguras, siendo ampliamente utilizado en sistemas de comercio electrónico, gestión de contenidos y redes sociales.
 
-\subsection{Maintaining the Integrity of the Specifications}
+\subsection{Django REST Framework}
+Django REST Framework (DRF) es una extensión poderosa para la creación de APIs RESTful dentro del ecosistema Django. Proporciona herramientas para la serialización de datos, control de permisos, autenticación, paginación y filtrado, facilitando la interoperabilidad entre el servidor y el cliente [2]. La arquitectura REST permite que distintos componentes del sistema (como aplicaciones móviles o frontends independientes) se comuniquen de manera estándar mediante peticiones HTTP.
 
-The IEEEtran class file is used to format your paper and style the text. All margins, 
-column widths, line spaces, and text fonts are prescribed; please do not 
-alter them. You may note peculiarities. For example, the head margin
-measures proportionately more than is customary. This measurement 
-and others are deliberate, using specifications that anticipate your paper 
-as one part of the entire proceedings, and not as an independent document. 
-Please do not revise any of the current designations.
+\subsection{Vue}
+Vue es un framework progresivo para la construcción de interfaces de usuario interactivas. Su enfoque basado en componentes reutilizables, junto con su sistema de enlace bidireccional (two-way binding), lo convierten en una solución ideal para el desarrollo de aplicaciones de una sola página (SPA) [3]. Además, Vue.js permite una integración progresiva, lo cual significa que puede ser utilizado tanto para partes específicas de una aplicación como para construir interfaces completas.
 
-\section{Prepare Your Paper Before Styling}
-Before you begin to format your paper, first write and save the content as a 
-separate text file. Complete all content and organizational editing before 
-formatting. Please note sections \ref{AA}--\ref{SCM} below for more information on 
-proofreading, spelling and grammar.
+\subsection{Arquitectura Cliente-Servidor y SPA}
+La arquitectura cliente-servidor divide la lógica del sistema entre dos capas principales: el servidor (backend), que gestiona los datos y la lógica empresarial, y el cliente (frontend), que presenta la información al usuario y gestiona las interacciones. Las aplicaciones SPA ofrecen una experiencia fluida al cargar una sola página HTML y actualizar dinámicamente su contenido mediante JavaScript, lo que reduce la necesidad de recargar completamente el sitio web [4]. Este enfoque mejora la velocidad de navegación y la interactividad del sistema.
+\section{Desarollo e Implementacion}
 
-Keep your text and graphic files separate until after the text has been 
-formatted and styled. Do not number text heads---{\LaTeX} will do that 
-for you.
+\subsection{Backend}
 
-\subsection{Abbreviations and Acronyms}\label{AA}
-Define abbreviations and acronyms the first time they are used in the text, 
-even after they have been defined in the abstract. Abbreviations such as 
-IEEE, SI, MKS, CGS, ac, dc, and rms do not have to be defined. Do not use 
-abbreviations in the title or heads unless they are unavoidable.
+El backend de GameStore fue desarrollado utilizando el framework Django, y se encarga de gestionar la lógica de negocio, la autenticación de usuarios y la comunicación con la base de datos alojada en Supabase. A pesar de que Django proporciona herramientas para definir modelos y administrar bases de datos localmente, en este proyecto se optó por externalizar la gestión de datos, accediendo a ellos mediante llamadas HTTP a la API de Supabase.
 
-\subsection{Units}
+El sistema se organiza en una aplicación modular denominada ESGames, que agrupa las vistas (views.py), rutas (urls.py) y serializadores (serializers.py) necesarios para el manejo de las operaciones de negocio. Las vistas están implementadas como clases basadas en Django REST Framework [3], lo que permite estructurar de forma clara los distintos endpoints y aplicar control de acceso según el tipo de usuario.\\
+
+Las funcionalidades implementadas en el backend incluyen:
 \begin{itemize}
-\item Use either SI (MKS) or CGS as primary units. (SI units are encouraged.) English units may be used as secondary units (in parentheses). An exception would be the use of English units as identifiers in trade, such as ``3.5-inch disk drive''.
-\item Avoid combining SI and CGS units, such as current in amperes and magnetic field in oersteds. This often leads to confusion because equations do not balance dimensionally. If you must use mixed units, clearly state the units for each quantity that you use in an equation.
-\item Do not mix complete spellings and abbreviations of units: ``Wb/m\textsuperscript{2}'' or ``webers per square meter'', not ``webers/m\textsuperscript{2}''. Spell out units when they appear in text: ``. . . a few henries'', not ``. . . a few H''.
-\item Use a zero before decimal points: ``0.25'', not ``.25''. Use ``cm\textsuperscript{3}'', not ``cc''.)
+	\item Registro e inicio de sesión de usuarios, integrando autenticación personalizada.
+	\item Gestión del flujo de compra, que valida el saldo del usuario, registra la transacción y actualiza la biblioteca en Supabase.
+	\item Manejo del carrito de compras y favoritos, controlando qué elementos están asociados a cada usuario.
+	\item Generación de comprobantes de compra, mediante plantillas HTML dinámicas renderizadas desde Django.
+	\item Enrutamiento y control de acceso, con protección de rutas mediante tokens de autenticación.
+	\item Conexión con Supabase, mediante peticiones programadas que interactúan con su API REST, en lugar de usar el ORM de Django.
 \end{itemize}
 
-\subsection{Equations}
-Number equations consecutively. To make your 
-equations more compact, you may use the solidus (~/~), the exp function, or 
-appropriate exponents. Italicize Roman symbols for quantities and variables, 
-but not Greek symbols. Use a long dash rather than a hyphen for a minus 
-sign. Punctuate equations with commas or periods when they are part of a 
-sentence, as in:
-\begin{equation}
-a+b=\gamma\label{eq}
-\end{equation}
+El backend actúa como intermediario entre la interfaz de usuario y la base de datos, implementando las reglas del negocio que rigen el comportamiento de la aplicación. Esta separación permite mantener un control centralizado sobre la lógica crítica del sistema, a la vez que se delega la persistencia de datos a un servicio externo.
 
-Be sure that the 
-symbols in your equation have been defined before or immediately following 
-the equation. Use ``\eqref{eq}'', not ``Eq.~\eqref{eq}'' or ``equation \eqref{eq}'', except at 
-the beginning of a sentence: ``Equation \eqref{eq} is . . .''
 
-\subsection{\LaTeX-Specific Advice}
+\subsection{Frontend}
+El frontend se desarrolló utilizando Vue.js, organizando la aplicación en una estructura de componente raíz (App.vue) y múltiples vistas contenidas en el directorio src/views. El punto de entrada (main.js) monta la aplicación y configura el enrutador.
 
-Please use ``soft'' (e.g., \verb|\eqref{Eq}|) cross references instead
-of ``hard'' references (e.g., \verb|(1)|). That will make it possible
-to combine sections, add equations, or change the order of figures or
-citations without having to go through the file line by line.
-
-Please don't use the \verb|{eqnarray}| equation environment. Use
-\verb|{align}| or \verb|{IEEEeqnarray}| instead. The \verb|{eqnarray}|
-environment leaves unsightly spaces around relation symbols.
-
-Please note that the \verb|{subequations}| environment in {\LaTeX}
-will increment the main equation counter even when there are no
-equation numbers displayed. If you forget that, you might write an
-article in which the equation numbers skip from (17) to (20), causing
-the copy editors to wonder if you've discovered a new method of
-counting.
-
-{\BibTeX} does not work by magic. It doesn't get the bibliographic
-data from thin air but from .bib files. If you use {\BibTeX} to produce a
-bibliography you must send the .bib files. 
-
-{\LaTeX} can't read your mind. If you assign the same label to a
-subsubsection and a table, you might find that Table I has been cross
-referenced as Table IV-B3. 
-
-{\LaTeX} does not have precognitive abilities. If you put a
-\verb|\label| command before the command that updates the counter it's
-supposed to be using, the label will pick up the last counter to be
-cross referenced instead. In particular, a \verb|\label| command
-should not go before the caption of a figure or a table.
-
-Do not use \verb|\nonumber| inside the \verb|{array}| environment. It
-will not stop equation numbers inside \verb|{array}| (there won't be
-any anyway) and it might stop a wanted equation number in the
-surrounding equation.
-
-\subsection{Some Common Mistakes}\label{SCM}
+Las vistas principales son:
 \begin{itemize}
-\item The word ``data'' is plural, not singular.
-\item The subscript for the permeability of vacuum $\mu_{0}$, and other common scientific constants, is zero with subscript formatting, not a lowercase letter ``o''.
-\item In American English, commas, semicolons, periods, question and exclamation marks are located within quotation marks only when a complete thought or name is cited, such as a title or full quotation. When quotation marks are used, instead of a bold or italic typeface, to highlight a word or phrase, punctuation should appear outside of the quotation marks. A parenthetical phrase or statement at the end of a sentence is punctuated outside of the closing parenthesis (like this). (A parenthetical sentence is punctuated within the parentheses.)
-\item A graph within a graph is an ``inset'', not an ``insert''. The word alternatively is preferred to the word ``alternately'' (unless you really mean something that alternates).
-\item Do not use the word ``essentially'' to mean ``approximately'' or ``effectively''.
-\item In your paper title, if the words ``that uses'' can accurately replace the word ``using'', capitalize the ``u''; if not, keep using lower-cased.
-\item Be aware of the different meanings of the homophones ``affect'' and ``effect'', ``complement'' and ``compliment'', ``discreet'' and ``discrete'', ``principal'' and ``principle''.
-\item Do not confuse ``imply'' and ``infer''.
-\item The prefix ``non'' is not a word; it should be joined to the word it modifies, usually without a hyphen.
-\item There is no period after the ``et'' in the Latin abbreviation ``et al.''.
-\item The abbreviation ``i.e.'' means ``that is'', and the abbreviation ``e.g.'' means ``for example''.
+	\item Home.vue: página de inicio que lista los videojuegos disponibles.
+	\item Login.vue / Register.vue: formularios para iniciar sesión y registrarse..
+	\item Profile.vue: vista del perfil del usuario, incluyendo su saldo, juegos comprados y favoritos.
 \end{itemize}
-An excellent style manual for science writers is \cite{b7}.
 
-\subsection{Authors and Affiliations}
-\textbf{The class file is designed for, but not limited to, six authors.} A 
-minimum of one author is required for all conference articles. Author names 
-should be listed starting from left to right and then moving down to the 
-next line. This is the author sequence that will be used in future citations 
-and by indexing services. Names should not be listed in columns nor group by 
-affiliation. Please keep your affiliations as succinct as possible (for 
-example, do not differentiate among departments of the same organization).
+El sistema de rutas se gestiona mediante Vue Router, y el estado de sesión del usuario se mantiene a través de un archivo auth.js que actúa como almacén global.
 
-\subsection{Identify the Headings}
-Headings, or heads, are organizational devices that guide the reader through 
-your paper. There are two types: component heads and text heads.
+La comunicación con la API se realiza mediante Axios, centralizada en módulos como api.js y videogames.js, lo que permite desacoplar la lógica de negocio del consumo de datos. El estilo general se define en style.css y se aplica mediante clases y estilos scoped en los componentes.
+\subsection{Base de Datos y Entidades}
+La base de datos utilizada en GameStore está alojada en Supabase, una plataforma de desarrollo backend como servicio que proporciona una base de datos PostgreSQL completamente gestionada en la nube. Supabase permite definir tablas, relaciones y políticas de acceso mediante una interfaz gráfica, además de generar automáticamente una API REST para cada entidad del sistema [5].
 
-Component heads identify the different components of your paper and are not 
-topically subordinate to each other. Examples include Acknowledgments and 
-References and, for these, the correct style to use is ``Heading 5''. Use 
-``figure caption'' for your Figure captions, and ``table head'' for your 
-table title. Run-in heads, such as ``Abstract'', will require you to apply a 
-style (in this case, italic) in addition to the style provided by the drop 
-down menu to differentiate the head from the text.
+Aunque el backend del sistema fue desarrollado con Django, la lógica de persistencia no se maneja mediante el ORM tradicional, sino que se conecta directamente con Supabase a través de la API proporcionada por esta plataforma. Esto permite separar la gestión de datos del entorno del servidor, facilitando la escalabilidad y la implementación en producción.	\\
 
-Text heads organize the topics on a relational, hierarchical basis. For 
-example, the paper title is the primary text head because all subsequent 
-material relates and elaborates on this one topic. If there are two or more 
-sub-topics, the next level head (uppercase Roman numerals) should be used 
-and, conversely, if there are not at least two sub-topics, then no subheads 
-should be introduced.
+Las entidades principales definidas en Supabase incluyen:
+\begin{itemize}
+	\item UserProfile: almacena información del usuario y su saldo virtual.
+	\item VideoGame: contiene los datos de los videojuegos disponibles.
+	\item CartItem, Favorite, Review, Library: definen las relaciones entre los usuarios y los juegos.
+\end{itemize}
 
-\subsection{Figures and Tables}
-\paragraph{Positioning Figures and Tables} Place figures and tables at the top and 
-bottom of columns. Avoid placing them in the middle of columns. Large 
-figures and tables may span across both columns. Figure captions should be 
-below the figures; table heads should appear above the tables. Insert 
-figures and tables after they are cited in the text. Use the abbreviation 
-``Fig.~\ref{fig}'', even at the beginning of a sentence.
 
-\begin{table}[htbp]
-\caption{Table Type Styles}
-\begin{center}
-\begin{tabular}{|c|c|c|c|}
-\hline
-\textbf{Table}&\multicolumn{3}{|c|}{\textbf{Table Column Head}} \\
-\cline{2-4} 
-\textbf{Head} & \textbf{\textit{Table column subhead}}& \textbf{\textit{Subhead}}& \textbf{\textit{Subhead}} \\
-\hline
-copy& More table copy$^{\mathrm{a}}$& &  \\
-\hline
-\multicolumn{4}{l}{$^{\mathrm{a}}$Sample of a Table footnote.}
-\end{tabular}
-\label{tab1}
-\end{center}
-\end{table}
+La estructura de datos se rige por un modelo relacional, donde:
+\begin{itemize}
+	\item Un UserProfile puede tener múltiples CartItems, Reviews, y Favorites.
+	\item Un VideoGame puede estar vinculado a muchas Reviews, Favorites y elementos de la biblioteca (Library).
+	\item Library representa una relación muchos a muchos (N:M) entre usuarios y videojuegos.
+\end{itemize}
+
+Las operaciones de lectura y escritura se realizan a través de peticiones HTTP a la API REST de Supabase, o bien mediante el cliente oficial en JavaScript. Esta aproximación permite una integración directa desde el frontend o desde servicios externos sin necesidad de exponer el backend de Django para estas tareas específicas.
+
+
+\section{Resultados}
 
 \begin{figure}[htbp]
-\centerline{\includegraphics{fig1.png}}
-\caption{Example of a figure caption.}7
-\label{fig}
+	\centerline{\includegraphics[width=3in]{vista.png}}
+	\caption{Example of a figure caption.}
+	\label{fig}
 \end{figure}
 
-Figure Labels: Use 8 point Times New Roman for Figure labels. Use words 
-rather than symbols or abbreviations when writing Figure axis labels to 
-avoid confusing the reader. As an example, write the quantity 
-``Magnetization'', or ``Magnetization, M'', not just ``M''. If including 
-units in the label, present them within parentheses. Do not label axes only 
-with units. In the example, write ``Magnetization (A/m)'' or ``Magnetization 
-\{A[m(1)]\}'', not just ``A/m''. Do not label axes with a ratio of 
-quantities and units. For example, write ``Temperature (K)'', not 
-``Temperature/K''.
+\begin{figure}[htbp]
+	\centerline{\includegraphics[width=3in]{register.png}}
+	\caption{Example of a figure caption.}
+	\label{fig}
+\end{figure}
 
-\section*{Acknowledgment}
+\begin{figure}[htbp]
+	\centerline{\includegraphics[width=3in]{login.png}}
+	\caption{Example of a figure caption.}
+	\label{fig}
+\end{figure}
 
-The preferred spelling of the word ``acknowledgment'' in America is without 
-an ``e'' after the ``g''. Avoid the stilted expression ``one of us (R. B. 
-G.) thanks $\ldots$''. Instead, try ``R. B. G. thanks$\ldots$''. Put sponsor 
-acknowledgments in the unnumbered footnote on the first page.
+\begin{figure}[htbp]
+	\centerline{\includegraphics[width=3in]{categories.png}}
+	\caption{Example of a figure caption.}
+	\label{fig}
+\end{figure}
 
-\section*{References}
+\begin{figure}[htbp]
+	\centerline{\includegraphics[width=3in]{cart.png}}
+	\caption{Example of a figure caption.}
+	\label{fig}
+\end{figure}
 
-Please number citations consecutively within brackets \cite{b1}. The 
-sentence punctuation follows the bracket \cite{b2}. Refer simply to the reference 
-number, as in \cite{b3}---do not use ``Ref. \cite{b3}'' or ``reference \cite{b3}'' except at 
-the beginning of a sentence: ``Reference \cite{b3} was the first $\ldots$''
-
-Number footnotes separately in superscripts. Place the actual footnote at 
-the bottom of the column in which it was cited. Do not put footnotes in the 
-abstract or reference list. Use letters for table footnotes.
-
-Unless there are six authors or more give all authors' names; do not use 
-``et al.''. Papers that have not been published, even if they have been 
-submitted for publication, should be cited as ``unpublished'' \cite{b4}. Papers 
-that have been accepted for publication should be cited as ``in press'' \cite{b5}. 
-Capitalize only the first word in a paper title, except for proper nouns and 
-element symbols.
-
-For papers published in translation journals, please give the English 
-citation first, followed by the original foreign-language citation \cite{b6}.
 
 \begin{thebibliography}{00}
 \bibitem{b1} Django Software Foundation, “Django,” https://www.djangoproject.com/, Accedido: 24-jul-2025.
 \bibitem{b2} Vue.js Developers, “Vue.js - The Progressive JavaScript Framework,” https://vuejs.org/, Accedido: 24-jul-2025.
-\bibitem{b3} .
-\bibitem{b4} .
-\bibitem{b5} .
+\bibitem{b3} Django REST Framework, “DRF - Django REST framework,” https://www.django-rest-framework.org/, Accedido: 24-jul-2025.
+\bibitem{b4} M. Stojanovic, “What is a Single Page Application (SPA)?,” Telerik, 2023. [En línea]. Disponible: https://www.telerik.com/blogs/what-is-a-single-page-application
+\bibitem{b5} Supabase, “The Open Source Firebase Alternative,” https://supabase.com/, Accedido: 24-jul-2025.
+
 \bibitem{b6} .
 \bibitem{b7} .
 \end{thebibliography}
