--- a/Articulo/Article_pweb2.tex
+++ b/Articulo/Article_pweb2.tex
@@ -12,8 +12,7 @@
 \begin{document}
 
 \title{ESGames: Desarrollo de una Plataforma Web para la Venta de Videojuegos Utilizando Django y Vue.js\\
-{\footnotesize \textsuperscript{*}Note: Sub-titles are not captured in Xplore and
-should not be used}
+
 \thanks{Identify applicable funding agency here. If none, delete this.}
 }
 
@@ -21,7 +20,7 @@ should not be used}
 \IEEEauthorblockA{\textit{Universidad Nacional de San Agustín} \\
 \textit{}
 Arequipa, Perú \\
-email address or ORCID}
+rfloresnu@unsa.edu.pe}
 \and
 \IEEEauthorblockN{2\textsuperscript{nd} Jimenez Paredes, Fabricio Gabriel}
 \IEEEauthorblockA{\textit{Universidad Nacional de San Agustín} \\
@@ -33,14 +32,14 @@ fjimenezp@unsa.edu.pe}
 \IEEEauthorblockA{\textit{Universidad Nacional de San Agustín} \\
 \textit{}
 Arequipa, Perú \\
-fjimenezp@unsa.edu.pe}
+mleonra@unsa.edu.pe}
 \and
 
 \IEEEauthorblockN{4\textsuperscript{th} Paredes Miranda, Mauricio Antonio}
 \IEEEauthorblockA{\textit{Universidad Nacional de San Agustín} \\
 \textit{}
 Arequipa, Perú \\
-fjimenezp@unsa.edu.pe}
+mparedesmir@unsa.edu.pe}
 }
 
 \maketitle
