--- a/Articulo/Article_pweb2.tex
+++ b/Articulo/Article_pweb2.tex
@@ -75,7 +75,7 @@ Vue es un framework progresivo para la construcción de interfaces de usuario in
 
 \subsection{Arquitectura Cliente-Servidor y SPA}
 La arquitectura cliente-servidor divide la lógica del sistema entre dos capas principales: el servidor (backend), que gestiona los datos y la lógica empresarial, y el cliente (frontend), que presenta la información al usuario y gestiona las interacciones. Las aplicaciones SPA ofrecen una experiencia fluida al cargar una sola página HTML y actualizar dinámicamente su contenido mediante JavaScript, lo que reduce la necesidad de recargar completamente el sitio web [4]. Este enfoque mejora la velocidad de navegación y la interactividad del sistema.
-\section{Desarollo e Implementacion}
+\section{Desarrollo e Implementacion}
 
 \subsection{Backend}
 
@@ -187,8 +187,8 @@ Las operaciones de lectura y escritura se realizan a través de peticiones HTTP 
 	\caption{Detalle del juego}
 	\label{fig}
 \end{figure}
-
-\section{Concluciones}
+\vspace{5\baselineskip}
+\section{Conclusiones }
 El desarrollo de ESGame permitió demostrar la viabilidad de construir una tienda digital de videojuegos utilizando tecnologías modernas basadas en arquitectura cliente-servidor. El uso combinado de Django como backend para la gestión de lógica de negocio y Vue.js para la construcción de una interfaz responsiva facilitó la creación de una experiencia de usuario fluida y estructurada.
 
 La integración con Supabase como servicio externo para la gestión de datos introdujo una capa de desacoplamiento que mejora la escalabilidad del sistema y reduce la complejidad de mantenimiento del backend. Esta decisión permitió centralizar la lógica de control en el servidor sin necesidad de utilizar un ORM propio, apoyándose en una base de datos en la nube con capacidades de autenticación y API REST integradas.
