add autovalue in report

--- a/gameStore/backend/Informe/Informe_Pweb2.tex
+++ b/gameStore/backend/Informe/Informe_Pweb2.tex
@@ -595,6 +595,30 @@ El sistema se encuentra desplegado en línea para uso y evaluación a través de
 \end{itemize}
 
 Ambos recursos permiten la validación funcional del sistema.
+\section{Adicionales}
+
+\subsection{Docentes Responsables del Curso}
+
+Durante el desarrollo de este proyecto, el curso fue llevado en modalidad teórico–práctica, bajo la orientación de los siguientes docentes:
+
+\begin{itemize}
+    \item \textbf{Teoría:} Mg. Richart Smith Escobedo Quispe
+    \item \textbf{Laboratorio:} Mg. Carlo José Luis Corrales Delgado
+\end{itemize}
+
+Ambos docentes brindaron las bases conceptuales y técnicas necesarias para el desarrollo de aplicaciones web modernas utilizando tecnologías actuales del backend y frontend.
+
+\subsection{Autoevaluación}
+
+A continuación, se presenta la imagen correspondiente a la autoevaluación del equipo con relación a su desempeño en el proyecto:
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.65\textwidth]{img/autoevaluacion.png}
+    \caption{Imagen de autoevaluación del estudiante}
+\end{figure}
+
+
 \section{Conclusiones}
 
 El desarrollo del sistema \textbf{ESGames} ha permitido consolidar una solución web funcional e integral para la gestión de una tienda digital de videojuegos. A lo largo del proyecto, se logró implementar satisfactoriamente tanto el frontend como el backend, integrando múltiples tecnologías modernas que permiten una experiencia fluida, segura y modular para el usuario final.
